<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This Source Code Form is subject to the terms of the Mozilla Public
  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
  ~ file, You can obtain one at http://mozilla.org/MPL/2.0/.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/container_stop_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/button_notification"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/listitem_content_height_single"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_event_note"
                android:tint="@color/colorTextDark"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/show_as_notification"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_share_departure_ETA"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/listitem_content_height_single"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_action_share"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/action_share_departure_ETA"
                android:tint="@color/colorTextDark"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_share_arrival_ETA"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/listitem_content_height_single"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_action_share"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/action_share_arrival_eta"
                android:tint="@color/colorTextDark"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_occupancy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            style="@style/Base.DialogWindowTitle.AppCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="@string/occupancy_question"/>

        <LinearLayout
            android:id="@+id/button_low_occupancy"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/listitem_content_height_single"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/low_occupancy"
                android:src="@drawable/ic_occupancy_low"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/low_occupancy"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_medium_occupancy"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/listitem_content_height_single"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/medium_occupancy"
                android:src="@drawable/ic_occupancy_medium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/medium_occupancy"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_high_occupancy"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/listitem_content_height_single"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/high_occupancy"
                android:src="@drawable/ic_occupancy_high"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/high_occupancy"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>