<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:animateLayoutChanges="true"
              android:orientation="vertical"
              tools:context="be.hyperrail.android.RouteSearchFragment">

    <LinearLayout
        android:id="@+id/accentSearchContainer"
        style="@style/HyperrailAccentSearchContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:theme="@style/HyperrailAccentSearchField">

        <LinearLayout

            android:id="@+id/container_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <AutoCompleteTextView
                android:id="@+id/input_from"
                android:layout_width="0dp"
                android:layout_height="@dimen/cardlist_textrow_double_height"
                android:layout_weight="1"
                android:completionThreshold="1"
                android:hint="@string/from"
                android:inputType="text|textAutoComplete"
                android:maxLines="1"
                android:textColor="@color/colorTextLight"
                android:theme="@style/HyperrailAccentSearchAutocomplete"
                />

            <Button
                android:id="@+id/button_swap"
                android:layout_width="@dimen/cardlist_textrow_double_height"
                android:layout_height="@dimen/cardlist_textrow_double_height"
                android:background="@drawable/inset_ic_swap_vertical_normal"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <AutoCompleteTextView
                android:id="@+id/input_to"
                android:layout_width="0dp"
                android:layout_height="@dimen/cardlist_textrow_double_height"
                android:layout_weight="1"
                android:completionThreshold="1"
                android:hint="@string/to"
                android:inputType="text|textAutoComplete"
                android:maxLines="1"
                android:textColor="@color/colorTextLight"
                android:theme="@style/HyperrailAccentSearchAutocomplete"/>

            <Button
                android:id="@+id/button_search"
                android:layout_width="@dimen/cardlist_textrow_double_height"
                android:layout_height="@dimen/cardlist_textrow_double_height"
                android:background="@drawable/inset_ic_action_search_normal"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_arrivedepart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="false"
            android:gravity="left"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/input_arrivedepart"
                style="@style/HyperrailAccentSearchField"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/cardlist_textrow_double_height"
                android:dropDownWidth="match_parent"
                android:entries="@array/departarrive"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:popupBackground="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/input_datetime"
                style="@style/TextAppearance.AppCompat.Medium.Inverse"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/time_now"
                android:textColor="@color/colorTextLight"/>

            <Button
                android:id="@+id/button_pickdatetime"
                android:layout_width="@dimen/cardlist_textrow_double_height"
                android:layout_height="@dimen/cardlist_textrow_double_height"
                android:background="@drawable/inset_ic_query_builder"/>
        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_primary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/cardlist_vertical_spacing"/>
</LinearLayout>
